[tool.poetry]
name = "molecule-hetznercloud"
version = "0.1.0"
description = ""
authors = ["Richard Steinbrueck <richard.steinbrueck@googlemail.com>"]
readme = "README.md"
packages = [{include = "molecule_hetznercloud"}]

[tool.poetry.dependencies]
python = "^3.11"
hcloud = "^1.26.0"


[tool.poetry.group.dev.dependencies]
mock = "^5.1.0"
pytest-cov = "^4.1.0"
pytest-helpers-namespace = "^2021.12.29"
pytest-mock = "^3.11.1"
pytest-xdist = "^3.3.1"
pytest = "^7.4.0"
molecule = "^5.1.0"
flake8 = "^6.0.0"
pymarkdownlnt = "^0.9.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
